--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -19,6 +19,7 @@
                     <li><a href="index.html">main</a></li>
                     <li><a href="about/about.html">about</a></li>
                     <li><a href="team_list/team_list.html">teams</a></li>
+                    <li><a href="logo_list/logo_list.html">files</a></li>
                 </ul>
             </nav>
 
